--- a/app/src/main/res/layout/activity_trip_details.xml
+++ b/app/src/main/res/layout/activity_trip_details.xml
@@ -185,24 +185,41 @@
                 android:id="@+id/AddMemory"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="true"
-                android:layout_alignParentEnd="true"
-                android:layout_margin="16dp"
+                android:layout_marginStart="100dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginBottom="30dp"
+                android:layout_marginVertical="90dp"
                 android:backgroundTint="@color/dark_blue"
                 android:src="@drawable/baseline_add_24"
                 android:visibility="gone"
-                android:tint="@color/white" />
+                android:tint="@color/white"/>
             <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/EditMemory"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="true"
-                android:layout_alignParentEnd="true"
-                android:layout_margin="16dp"
+                android:layout_marginStart="100dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginBottom="30dp"
+                android:layout_marginVertical="90dp"
                 android:backgroundTint="@color/dark_blue"
                 android:src="@drawable/baseline_edit_24"
                 android:visibility="gone"
                 android:tint="@color/white" />
+            <com.google.android.material.bottomnavigation.BottomNavigationView
+                android:id="@+id/bottom_navigation"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:background="@android:color/transparent"
+                app:itemIconTint="#5A93C5"
+                app:itemBackground="@drawable/icon_border"
+                app:itemIconSize="35dp"
+                app:labelVisibilityMode="labeled"
+                app:menu="@menu/bottom_nav_menu"/>
         </RelativeLayout>
     </LinearLayout>
 </ScrollView>
