--- a/app/src/main/res/layout/memory_text_item.xml
+++ b/app/src/main/res/layout/memory_text_item.xml
@@ -6,29 +6,27 @@
     android:layout_marginTop="10dp"
     android:id="@+id/MemoryTextLayout">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:gravity="center">
+
+        <TextView
+            android:layout_width="188dp"
+            android:layout_height="wrap_content"
+            android:text="Memory"
+            android:id="@+id/MemoryText"
+            android:gravity="center"
+            android:layout_marginTop="35dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:background="@drawable/note"
+            android:padding="25dp"
+            android:textAlignment="center"/>
 
         <ImageView
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:src="@drawable/pin"
-            android:layout_marginBottom="15dp"/>
+            android:layout_marginLeft="50dp"
+            />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Memory"
-            android:id="@+id/MemoryText"
-            android:gravity="center"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:background="@drawable/memory_text"
-            android:padding="25dp"
-            android:textAlignment="center"/>
-    </LinearLayout>
+
 
 </FrameLayout>
